--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=blog
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/blogdb?useSSL=false&serverTimezone=Asia/Tokyo
-spring.datasource.url=jdbc:mysql://localhost:3306/blogdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Tokyo
+spring.datasource.url=jdbc:mysql://db:3306/blogdb?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=Asia/Tokyo
 
 spring.datasource.username=user
 spring.datasource.password=pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
