--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,15 @@ services:
     depends_on:
       - db
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+
 volumes:
   db-data:
